Added Burndown chart

--- a/YSM/src/index.html
+++ b/YSM/src/index.html
@@ -2,16 +2,20 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Nitro Review</title>
-    <base href="/">
+  <script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
+  <script src="https://www.amcharts.com/lib/3/serial.js"></script>
+  <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="assets/icon.png">
+  <meta charset="utf-8">
+  <title>Nitro Review</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="assets/icon.png">
 </head>
 
 <body>
-    <app-root></app-root>
+  <app-root></app-root>
 </body>
 
 </html>
